test/runnable/operator-precedence.crow.ast.repr
file-ast(
	imports: ports(range(0, 39), [import-ast(0, "/io/print", some([print])), import-ast(0, "/number", some([+, *]))])
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			public?: true
			sig: sig-ast(
				range(39, 62)
				main
				inststruct(range(44, 51), name-range(44, fut), [inststruct(range(48, 51), name-range(48, nat))])
				[
					param(
						range(52, 61)
						none
						inststruct(range(54, 61), name-range(54, arr), [inststruct(range(58, 61), name-range(58, str))]))])
			summon: true
			body: seq-ast(
				seq-ast(
					call(
						prefix
						name-range(71, print)
						[]
						[
							call(
								prefix
								name-range(78, to-str)
								[]
								[
									call(
										infix
										name-range(88, *)
										[]
										[
											literal(nat(1, false))
											call(
												infix
												name-range(93, +)
												[]
												[literal(nat(2, false)), literal(nat(3, false))])])])])
					call(
						prefix
						name-range(98, print)
						[]
						[
							call(
								infix
								name-range(115, to-str)
								[]
								[
									call(
										infix
										name-range(107, +)
										[]
										[
											literal(nat(1, false))
											call(
												infix
												name-range(111, *)
												[]
												[literal(nat(2, false)), literal(nat(3, false))])])])]))
				call(infix, name-range(125, resolved), [], [literal(nat(0, false))])))])
